# schema_registry_converter

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES.md  appveyor.yml  check_test_app_done.sh  docker-compose.yaml  make.toml  prepare_integration_test.sh
.github/workflows/: ci.yml
src/: avro.rs  avro_common.rs  error.rs  json.rs  json_common.rs  lib.rs  proto.rs  proto_common_types.rs  proto_decoder.rs  proto_fish.rs  proto_raw.rs  proto_raw_common.rs  proto_raw_encoder.rs  proto_resolver.rs  schema_registry.rs  schema_registry_common.rs  value_fixed_fix.rs
src/async_impl/: avro.rs  easy_avro.rs  easy_json.rs  easy_proto_decoder.rs  easy_proto_raw.rs  json.rs  mod.rs  proto_decoder.rs  proto_raw.rs  schema_registry.rs
src/blocking/: avro.rs  json.rs  mod.rs  proto_decoder.rs  proto_raw.rs  proto_resolver.rs  schema_registry.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: integration_tests.rs  kafka_consumer.rs  kafka_producer.rs  lib.rs  proto_resolver.rs
tests/async_impl/: mod.rs  schema_registry_calls.rs
tests/blocking/: avro_consumer.rs  avro_tests.rs  kafka_consumer.rs  kafka_producer.rs  mod.rs  proto_consumer.rs  proto_tests.rs  schema_registry_calls.rs
tests/schema/: jsontest-example.json  result-example.json
uml/: consumer.puml  producer.puml
