[package]
name = "schema_registry_converter"
version = "2.0.0"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
include = ["src/**/*", "Cargo.toml"]
description = "Encode/decode data from/to kafka using the Confluent Schema Registry"
homepage = "https://github.com/gklijs/schema_registry_converter"
repository = "https://github.com/gklijs/schema_registry_converter"
readme = "README.md"
keywords = ["kafka", "encode", "decode", "schema", "avro", "protobuf", "json schema"]
categories = ["encoding", "parsing"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
avro = ["avro-rs"]
proto_decoder = ["protofish", "bytes", "logos", "integer-encoding"]
proto_raw = ["logos", "integer-encoding"]
kafka_test = []
default = []

[dependencies.avro-rs]
version = "^0.10"
optional = true

[dependencies.bytes]
version = "^0.5"
optional = true

[dependencies.byteorder]
version = "^1.3"

[dependencies.failure]
version = "^0.1"

[dependencies.integer-encoding]
version = "^1.1"
optional = true

[dependencies.logos]
version = "^0.11"
optional = true

[dependencies.protofish]
version = "^0.2"
optional = true

[dependencies.reqwest]
version = "^0.10"
features = ["blocking","json"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"

[dev-dependencies]
mockito = "^0.27.0"
rdkafka = { version = "^0.23.1", features = ["cmake-build"] }
futures = "^0.3.5"
rand = "^0.7.3"

[badges.travis-ci]
repository = "gklijs/schema_registry_converter"

[badges.codecov]
repository = "gklijs/schema_registry_converter"

[badges.is-it-maintained-open-issues]
repository = "gklijs/schema_registry_converter"

[badges.maintenance]
status = "passively-maintained"
