[package]
name = "schema_registry_converter"
version = "2.0.2"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
include = ["src/**/*", "Cargo.toml"]
description = "Encode/decode data from/to kafka using the Confluent Schema Registry"
homepage = "https://github.com/gklijs/schema_registry_converter"
repository = "https://github.com/gklijs/schema_registry_converter"
readme = "README.md"
keywords = ["kafka", "schema", "avro", "protobuf", "jsonschema"]
categories = ["encoding", "parsing"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
avro = ["avro-rs"]
blocking = ["reqwest/blocking"]
json = ["url", "valico"]
proto_decoder = ["bytes", "integer-encoding", "logos", "protofish"]
proto_raw = ["integer-encoding", "logos"]
easy = ["tokio"]
kafka_test = []
default = ["futures"]

[dependencies.byteorder]
version = "^1.4"

[dependencies.failure]
version = "^0.1"

[dependencies.reqwest]
version = "^0.11"
features = ["json"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"

[dependencies.avro-rs]
version = "^0.13"
optional = true

[dependencies.bytes]
version = "^1.0"
optional = true

[dependencies.futures]
version = "^0.3"
optional = true

[dependencies.integer-encoding]
version = "^3.0"
optional = true

[dependencies.logos]
version = "^0.12"
optional = true

[dependencies.protofish]
version = "^0.3"
optional = true

[dependencies.url]
version = "^2"
optional = true

[dependencies.tokio]
version = "^1.2.0"
features = ["macros"]
optional = true

[dependencies.valico]
version = "^3.5"
optional = true

[dev-dependencies]
mockito = "^0.29.0"
rdkafka = { version = "^0.25.0", features = ["cmake-build"] }
rand = "^0.8.3"
test_utils = {path = "test_utils"}

[package.metadata.docs.rs]
all-features = true

[badges.travis-ci]
repository = "gklijs/schema_registry_converter"

[badges.codecov]
repository = "gklijs/schema_registry_converter"

[badges.is-it-maintained-open-issues]
repository = "gklijs/schema_registry_converter"

[badges.maintenance]
status = "passively-maintained"
