[package]
name = "schema_registry_converter"
version = "4.1.0"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
include = ["src/**/*", "Cargo.toml"]
description = "Encode/decode data from/to kafka using the Confluent Schema Registry"
homepage = "https://github.com/gklijs/schema_registry_converter"
repository = "https://github.com/gklijs/schema_registry_converter"
readme = "README.md"
keywords = ["kafka", "schema", "avro", "protobuf", "jsonschema"]
categories = ["encoding", "parsing"]
license = "MIT/Apache-2.0"
edition = "2021"

[features]
native_tls = ["reqwest/native-tls"]
rustls_tls = ["reqwest/rustls-tls"]

avro = ["apache-avro"]
blocking = ["reqwest/blocking"]
json = ["url", "valico"]
proto_decoder = ["bytes", "integer-encoding", "logos", "protofish"]
proto_raw = ["integer-encoding", "logos"]
easy = ["tokio"]
kafka_test = []
default = ["futures", "native_tls"]

[dependencies.byteorder]
version = "^1.5"

[dependencies.dashmap]
version = "^6.0"

[dependencies.reqwest]
version = "^0.12"
default-features = false
features = ["json"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"

[dependencies.apache-avro]
version = "^0.16"
optional = true

[dependencies.bytes]
version = "^1.0"
optional = true

[dependencies.futures]
version = "^0.3"
optional = true

[dependencies.integer-encoding]
version = "^4.0"
optional = true

[dependencies.logos]
version = "^0.14"
optional = true

[dependencies.protofish]
git = "https://github.com/fennel-ai/protofish.git"
branch = "main"
optional = true

[dependencies.url]
version = "^2.5"
optional = true

[dependencies.tokio]
version = "^1.38"
features = ["macros"]
optional = true

[dependencies.valico]
version = "^4.0"
optional = true

[dev-dependencies]
mockito = "^1.4.0"
rdkafka = { version = "^0.36.2", features = ["cmake-build"] }
rand = "^0.8.5"
test_utils = { path = "test_utils" }
tokio = { version = "^1.38.0", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
